--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     },
     "main": "index.js",
     "license": "MIT",
+    "scripts": {
+        "start": "node index.js"
+    },
     "dependencies": {
         "express": "^4.18.1"
     }
